# Orion

./: .dockerignore  .gitignore  Cargo.toml  DEVELOPERS.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
.github/workflows/: placement-chaos.yml  release.yml
crates/orion-raft/: Cargo.toml  build.rs
crates/orion-raft/src/: checkpoint_artifact.rs  codec.rs  hlc.rs  lib.rs  openraft_store.rs  raft_metrics.rs  slatedb_sqlite_store.rs  sqlite_commit_sink.rs  sqlite_raft_client.rs  sqlite_runtime.rs  state.rs  tonic_transport.rs  types.rs
crates/orion-sqlite/: Cargo.toml
crates/orion-sqlite/src/: commit.rs  lib.rs  store.rs  vfs.rs
docker/cluster/: node1.yaml  node2.yaml  node3.yaml
docker/cluster-regional-object-store/: node1.yaml  node2.yaml  node3.yaml
docs/: db-placement-dead-source-failover.md  db-placement-object-native-transfer.md  libsql-blob-api.md  sqlite-api-policy.md  sqlite-compatibility-roadmap.md  sqlite-object-store-layout.md
examples/: node1.yaml  node2.yaml  node3.yaml
proto/orion/raft/v1/: raft.proto
scripts/: docker-cluster-chaos.mjs  docker-cluster-chaos.sh  docker-cluster-crash-smoke.mjs  docker-cluster-crash-smoke.sh  docker-placement-benchmark.mjs  docker-placement-benchmark.sh  docker-placement-chaos.mjs  docker-placement-chaos.sh  docker-placement-move-smoke.mjs  docker-placement-move-smoke.sh  docker-placement-regional-object-store-benchmark.sh  drizzle-libsql-smoke.mjs  hrana-ws-smoke.mjs  libsql-benchmark-matrix.mjs  libsql-blob-api-smoke.mjs  libsql-http-compat-smoke.mjs  local-drizzle-libsql-smoke.sh  local-libsql-client-smoke.sh  local-libsql-latency.mjs  official-libsql-client-smoke.mjs  orion-libsql-shell.mjs  orion-sqllogictest.mjs  process-blob-api-smoke.sh  process-drizzle-libsql-smoke.sh  process-hrana-ws-smoke.sh  process-libsql-client-smoke.sh  process-libsql-http-compat-smoke.sh  process-restart-smoke.sh  process-sqllogictest-smoke.sh
src/: cli.rs  db_cli.rs  libsql_http.rs  main.rs  node.rs  storage_node.rs
testdata/sqllogictest/: orion-core.slt
